Show available profiles in stack up action
Added a new setting for the extension to set the  default profile.
Change execShell function to return both stdout and stderr

--- a/package.json
+++ b/package.json
@@ -56,7 +56,17 @@
         "title": "Service up",
         "category": "Elastic Package"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Elastic Package",
+      "properties": {
+        "epcode.defaultProfile": {
+          "type": "string",
+          "default": "default",
+          "markdownDescription": "Default profile to be used in `elastic-package stack` commands"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
